<resources>
    <string name="app_name" translatable="false">King Apartment</string>
    <string name="app_version" translatable="false">v1.702c</string>
    <string name="channel_name" translatable="false">channel_name</string>
    <string name="channel_description" translatable="false">channel_description</string>
    <string name="btn_intro">Tiếp Theo</string>
    <string name="text_skip">Bỏ qua</string>
    <string name="title_intro_1">Ứng Dụng Bất Động Sản cập nhật nhanh nhất</string>
    <string name="title_intro_2">Ứng Dụng Bất Động Sản đầy đủ nhất</string>
    <string name="title_intro_3">Ứng Dụng Bất Động Sản chính xác nhất</string>
    <string name="content_intro">Với đội ngũ nhân viên hoạt động 24/7 ứng dụng cập nhật thông tin nhanh nhất chính xác nhất</string>
    <string name="content_intro2">Với độ phủ sóng rộng khắp khu vực Cầu Giấy luôn có nguồn dữ liệu đầy đủ chi tiết nhất </string>
    <string name="content_intro3">Với dữ liệu được lấy từ những nguồn uy tín cam kết tất cả các thông tin đều là chính xác</string>
    <string name="signin_title">Đăng Nhập</string>
    <string name="signin_onetouch">Đăng Nhập và đăng kí chỉ với một chạm</string>
    <string name="signin_title_email">Email</string>
    <string name="signin_title_pass_hint">Mật khẩu</string>
    <string name="remember_pass">Nhớ mật khẩu</string>
    <string name="signin_button">Đăng nhập</string>
    <string name="login_button">Đăng nhập với Gmail</string>
    <string name="forgot_pass_text">Quên mật khẩu?</string>
    <string name="text_question_signup">Bạn chưa có tài khoản</string>
    <string name="text_signup_now">Đăng kí ngay</string>

    <string name="facebook_app_id">828260374981108</string>

    <string name="fb_login_protocol_scheme" translatable="false">fb828260374981108</string>
    <string name="facebook_client_token">c48ac28ec88df46ccc6015c680bc889d</string>


    <string name="discover">Bắt đầu sử dụng</string>
    <string name="text_setting">Cài đặt</string>
    <string name="text_setting_profile">Thông tin</string>
    <string name="text_setting_notification">Thông báo - Giao diện</string>
    <string name="text_setting_security">Bảo mật</string>
    <string name="text_setting_help">Trợ giúp</string>
    <string name="text_setting_contact">Liên hệ - Báo lỗi</string>
    <string name="text_setting_term">Điều khoản - Chính sách</string>
    <string name="text_setting_signout">Đăng xuất</string>
    <string name="text_setting_signout_question">Bạn có muốn đăng xuất?</string>
    <string name="button_setting_signout">Thoát</string>
    <string name="button_setting_cancel">Hủy</string>
    <string name="text_term_title">Điều khoản - Chính sách</string>
    <string name="text_team_introduction_title">Giới thiệu</string>
    <string name="text_team_introduction_content">An increasing number of smartphone user every day since a decades and it would not stop!Given that mobile phones are now more affordable and come with many of applications, theyhave   become   an   important   device   in   people’s   daily   lives.   The   most   popular   and   favoritessmartphone that choose   by   consumer  are from Apple iPhone.    In   this   case,  my group willintroduce the Apple Inc. Company.As you may know, Apple Inc. founder by Steve Jobs is an America multinational corporation thatdesigns and manufactures consumer electronics and computer software products. The companybest known hardware products include Macintosh computers, the iPod and the iPhone. Applesoftware includes the Max OS X operating system, the iTunes media browser, the iLife suite ofmultimedia and creativity software, the iWork suite of productivity software, Final Cut Studio, asuite of professional audio and films-industry software products and Logic studio, a suite ofaudio tools. The company operates more than 250 retail stores in nine countries and an onlinestore where hardware and software products are sold.Established in California on 1st April 1976 and incorporated 3rd January 1977. The company wascalled Apple Computer Inc. for its first 30 years but dropped the word “Computer” on 9th January2007 to reflect the company ongoing expansion into the consumer electronics market in additionto its traditional focus on personal computers. Apple has about more than 35,000 employeesworldwide  and  had  worldwide annual  sales  of billion  in  USD in  its fiscal  year  ending 29thSeptember 2008. For reasons as various as its philosophy of comprehensive aesthetics design toits distinctive advertising campaigns, Apple has established a unique reputation in the consumerelectronics industry. This includes a customer base that is devoted to the company and its brand,particularly in United States.</string>
    <string name="text_team_service_title">Dịch vụ</string>
    <string name="text_team_service_content">One of the biggest challenges in delivering responsive customer service is the overwhelming number of calls received.Another is the inconsistency of responses customers receive, as they often end up speaking to different representatives each time.Then there’s the challenge of timeliness. All to often, customer service requests come at odd times. This increases the chances of their being missed. If a customer chooses to walk away instead of complaining that you haven’t solved his or her problem, you may never even realize that you didn’t close a particular service request, or created an unhappy customer.This Best Practices Guide shares proven methods for leveraging conversational text messaging to respond and resolve customer issues in a fraction of the time, building customer loyalty and driving retention.</string>
    <string name="text_contact_title">Liên hệ - Báo lỗi</string>
    <string name="contact_name_edt">Họ và Tên</string>
    <string name="help_title">Trợ giúp</string>
    <string name="contact_message_edt">Viết gì đó cho chúng tôi</string>
    <string name="profile_user_text">Cập nhật thông tin đang sửa chữa nâng cấp, bạn vui lòng quay lại sau</string>
    <string name="title_help_1">Tiêu đề hướng dẫn 1</string>
    <string name="title_help_2">Tiêu đề hướng dẫn 1</string>
    <string name="title_help_3">Tiêu đề hướng dẫn 1</string>
    <string name="title_help_4">Tiêu đề hướng dẫn 1</string>
    <string name="title_help_5">Tiêu đề hướng dẫn 1</string>
    <string name="title_help_6">Tiêu đề hướng dẫn 1</string>
    <string name="title_help_7">Tiêu đề hướng dẫn 1</string>
    <string name="title_help_8">Tiêu đề hướng dẫn 1</string>
    <string name="title_help_9">Tiêu đề hướng dẫn 1</string>
    <string name="content_help_1">Nội dung hướng dẫn 1</string>
    <string name="content_help_2">Nội dung hướng dẫn 1</string>
    <string name="content_help_3">Nội dung hướng dẫn 1</string>
    <string name="content_help_4">Nội dung hướng dẫn 1</string>
    <string name="content_help_5">Nội dung hướng dẫn 1</string>
    <string name="content_help_6">Nội dung hướng dẫn 1</string>
    <string name="content_help_7">Nội dung hướng dẫn 1</string>
    <string name="content_help_8">Nội dung hướng dẫn 1</string>
    <string name="content_help_9">Nội dung hướng dẫn 1</string>
    <string name="security_title">Bảo mật</string>
    <string name="security_faceid">Cá nhân hóa quảng cáo</string>
    <string name="security_ads_title">Targeted Ads</string>
    <string name="security_ads_content">Targeted Ads</string>
    <string name="security_changepass">Đổi mật khẩu</string>
    <string name="notification_title">Thông báo - Giao diện</string>
    <string name="notification_bell">Âm thanh</string>
    <string name="notification_ads">Nhận thông báo quảng cáo</string>
    <string name="notification_vibrate">Rung</string>
    <string name="user_title">Thông tin cá nhân</string>
    <string name="user_fullname">Họ và Tên</string>
    <string name="user_email">Email</string>
    <string name="user_number">Số điện thoại</string>
    <string name="user_btn">Lưu thay đổi</string>
    <string name="user_dark">Giao diện tối</string>
    <string name="home_search">Search</string>
    <string name="detail_apartment_overview">OverView</string>
    <string name="detail_apartment_location">Location</string>
    <string name="detail_apartment_features">Features</string>
    <string name="detail_apartment_album">Album</string>
    <string name="detail_apartment_price">Price</string>
    <string name="detail_apartment_month">month</string>
    <string name="detail_apartment_contactnow">Contact Now</string>
    <string name="user_change_language">Thay đổi ngôn ngữ</string>
    <string name="contact_message_max">Tối đa 250 kí tự</string>
    <string name="contact_btn">Gửi tin nhắn</string>
    <string name="home_all_list">See All</string>
    <string name="home_type_popular">Popular</string>
    <string name="home_type_nearyou">Near you</string>
    <string name="home_type_wishlist">yêu thích</string>
    <string name="wishlist_title">Yêu thích</string>
    <string name="wishlist_results">Căn hộ yêu thích</string>
    <string name="wishlist_count">kết quả</string>
    <string name="wishlist_remove_title">Bỏ thích căn này nhé?</string>
    <string name="wishlist_remove_button">Ok</string>
    <string name="search_title">Search</string>
    <string name="search_hint">search</string>
    <string name="search_result_title">kết quả</string>
    <string name="search_text_hint">search something ...</string>
    <string name="notification_title_text">Thông báo</string>
    <string name="notification_today">Hôm nay</string>
    <string name="notification_tomorrow">Hôm qua</string>
    <string name="signin_email">Email<font color="#F81212"> *</font>
    </string>
    <string name="contact_name">Họ và Tên<font color="#F81212"> *</font>
    </string>
    <string name="contact_message">Tin nhắn<font color="#F81212"> *</font>
    </string>
    <string name="user_number_special">Số điện thoại<font color="#F81212"> *</font>
    </string>
    <string name="signin_title_pass">Mật khẩu<font color="#F81212"> *</font></string>
    <string name="signin_email_error">Email không đúng!</string>
</resources>