<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/padding_xlarge_x"
        android:layout_marginRight="@dimen/padding_xlarge_x"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_large"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:text="@string/text_contact_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_xlarge" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_marginTop="@dimen/padding_large"
            android:layout_marginBottom="@dimen/padding_normal"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:text="@string/contact_name"
            android:textColor="@color/text_color_black_xtiny_"
            android:textSize="@dimen/text_size_normal_tiny" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="@dimen/button_size_weight_large"
            android:layout_height="@dimen/button_size_height"
            android:background="@drawable/shape_edittext"
            android:fontFamily="@font/source_sans_pro_bold"
            android:padding="@dimen/padding_small"
            android:text="@string/contact_name_edt"
            android:textColor="#EBEEF2"
            android:textSize="@dimen/text_size_normal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="134dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/padding_large"
            android:layout_marginBottom="@dimen/padding_normal"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:text="@string/signin_email"
            android:textColor="@color/text_color_black_xtiny_"
            android:textSize="@dimen/text_size_normal_tiny" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="@dimen/button_size_weight_large"
            android:layout_height="@dimen/button_size_height"
            android:background="@drawable/shape_edittext"
            android:fontFamily="@font/source_sans_pro_bold"
            android:padding="@dimen/padding_small"
            android:text="@string/signin_title_email"
            android:textColor="#EBEEF2"
            android:textSize="@dimen/text_size_normal" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvleft"
                android:layout_width="119dp"
                android:layout_height="47dp"
                android:layout_marginBottom="@dimen/padding_normal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:text="@string/contact_message"
                android:textColor="@color/text_color_black_xtiny_"
                android:textSize="@dimen/text_size_normal_tiny" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvright"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_gravity="end"
                android:layout_marginBottom="@dimen/padding_normal"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:gravity="right"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/contact_message_max"
                android:textColor="@color/text_color_black_xtiny_"
                android:textSize="@dimen/text_size_normal_tiny" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="@dimen/button_size_weight_large"
            android:layout_height="@dimen/button_size_small"
            android:background="@drawable/shape_edittext_multitext"
            android:fontFamily="@font/source_sans_pro_bold"
            android:padding="@dimen/padding_small"
            android:inputType="text|textMultiLine"
            android:gravity="top"
            android:text="@string/contact_message_edt"
            android:textColor="#EBEEF2"
            android:textSize="@dimen/text_size_normal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signin"
            android:layout_width="@dimen/button_size_weight_large"
            android:layout_height="@dimen/button_size_height"
            android:layout_marginTop="@dimen/padding_large"
            android:background="@drawable/shape_button_gradient"
            android:text="@string/contact_btn"
            android:textColor="@color/textcolor_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_signin_top" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>