<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/padding_xlarge_x"
        android:layout_marginRight="@dimen/padding_xlarge_x"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_large"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:text="@string/text_term_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_xlarge" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_normal"
                    android:layout_marginTop="@dimen/padding_large"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="@string/text_team_introduction_title"
                    android:textColor="@color/text_color_light"
                    android:textSize="@dimen/text_size_middle_large" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_normal"
                    android:layout_marginTop="@dimen/padding_large"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="@string/text_team_introduction_content"
                    android:textColor="@color/text_color_black_xtiny_"
                    android:textSize="@dimen/text_size_normal" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_normal"
                    android:layout_marginTop="@dimen/padding_large"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="@string/text_team_service_title"
                    android:textColor="@color/text_color_light"
                    android:textSize="@dimen/text_size_middle_large" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_normal"
                    android:layout_marginTop="@dimen/padding_large"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="@string/text_team_service_content"
                    android:textColor="@color/text_color_black_xtiny_"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>